--- a/app/main/home.jade
+++ b/app/main/home.jade
@@ -43,6 +43,7 @@ tabset(justified="true")
         li Dry Cleaners
         li Coin Laundromat 
         li Fire Garment Restoration
+        a.btn.btn-lg.btn-success(href="#/contact") Contact us now
         
     .col-md-5
       img.featurette-image.img-responsive(src="http://www.stcroixcleaners.com/wp-content/uploads/2012/07/earthfriendly.jpg")
