added code for background video

--- a/app/main/home.jade
+++ b/app/main/home.jade
@@ -1,3 +1,5 @@
+vid-bg(resources="resources", poster="poster", full-screen="fullScreen", muted="muted", z-index="zIndex")
+
 div.visible-xs
   a.btn.btn-lg.btn-block.btn-danger(href="tel:+18474387372") Click to Call 1 (847) 438 7372
 
