working video banner

--- a/app/index.jade
+++ b/app/index.jade
@@ -48,7 +48,7 @@ html(lang="en")
     div(class="container" ng-view="")
     //- https://github.com/mgcrea/angular-strap/issues/1179
     //- temp fix for floating alerts:
-    <link rel="stylesheet" href="//mgcrea.github.io/angular-strap/styles/libraries.min.css">
+    //- <link rel="stylesheet" href="//mgcrea.github.io/angular-strap/styles/libraries.min.css">
     script(src="lib.js")
     script(src="templates.js")
     script(src="app.js")
