hacked it but it works I guess

--- a/app/app.less
+++ b/app/app.less
@@ -87,9 +87,20 @@ body { padding-top: 70px; }
 
 }
 
+.grid-inner{
+  margin: -20px;
+  padding: 40px;
+}
 
+.white-inner{
+   
+    max-width: 1600px; //the largest you want the image to stretch
+    background-color:white;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding: 20px;
 
-
+}
 
 
 .carousel.slide{
