--- a/app/index.jade
+++ b/app/index.jade
@@ -45,7 +45,7 @@ html(lang="en")
 
 
 
-    div(class="container" ng-view="")
+    div(class="container-fluid" ng-view="")
     //- https://github.com/mgcrea/angular-strap/issues/1179
     //- temp fix for floating alerts:
     //- <link rel="stylesheet" href="//mgcrea.github.io/angular-strap/styles/libraries.min.css">
