--- a/app/main/home.jade
+++ b/app/main/home.jade
@@ -1,60 +1,60 @@
 //- #myCarousel(style='height: 405px')
-div(ng-controller="mainCtrl", style="height: 540px;background-image: url('http://bkwld.com/img/misc/grid.png');top: -21px; left: 0px;")
+div.grid-inner(ng-controller="mainCtrl", style="height: 540px;background-image: url('http://bkwld.com/img/misc/grid.png');top: -21px; left: 0px;")
+  //- video(loop="loop", autoplay, style=" position: absolute; top: -21px; left: 0px; min-width: 100%;z-index: -1;")
+  //-   source(src='https://s3.amazonaws.com/kristile.com/videohiveFloorDemo.mp4', type="video/webm")
+
+  vid-bg(resources="resources", poster="poster", full-screen="fullScreen", muted="muted", z-index="zIndex")
   h1 Some Title Here
   button.btn.btn-lg.btn-success Continue!
-  video(loop="loop", autoplay, style=" position: absolute; top: -21px; left: 0px; min-width: 100%;z-index: -1;")
-    source(src='https://s3.amazonaws.com/kristile.com/videohiveFloorDemo.mp4', type="video/webm")
-    //- <source src="/video/features/main.mp4", type="video/mp4">
-  //- vid-bg(resources="resources", poster="poster", full-screen="fullScreen", muted="muted", z-index="zIndex")
 
 
 div.visible-xs
   a.btn.btn-lg.btn-block.btn-danger(href="tel:+18474387372") Click to Call 1 (847) 438 7372
 
-.no-slider
-  img.img-responsive(src='http://lockers4laundry.com/wp-content/uploads/2013/09/dry-cleaning-e1378086833631.jpg', alt='Generic placeholder image')
+.white-inner
+  tabset(justified="true")
+    tab(heading="Dry Cleaners")
+      h1 Dry Cleaners
+    tab(heading="Coin Laundromat")
+      h1 Coin Laundromat 
+    tab(heading="Fire Garment Restoration")
+      h1 Fire Garment Restoration    
 
-tabset(justified="true")
-  tab(heading="Dry Cleaners")
-    h1 Dry Cleaners
-  tab(heading="Coin Laundromat")
-    h1 Coin Laundromat 
-  tab(heading="Fire Garment Restoration")
-    h1 Fire Garment Restoration    
-
-.container.marketing
-  //- .row
-    .col-lg-4
-      img.img-circle(src='', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-      h2 File uploader
-      p
-        | Uploads from local computer or a url. Makes a thumbnail and lists all files uploaded with option to crop on images.
-      p
-        a.btn.btn-default(href='#', role='button') View details »
-  //- .row
-    .col-lg-4
-      img.img-circle(src='', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-      h2 Phone system
-      p
-        | Call forwarding to a local area code
-      p
-        a.btn.btn-default(href='#', role='button') View details »
-    
-  // START THE FEATURETTES
-  hr.featurette-divider
-  .row.featurette
-    .col-md-7
-      h2.featurette-heading
-        | Servicing the Lake Zurich for over 20 years. 
-        span.text-muted Dry Cleaning company.
-      p.lead
-        | We pickup and deliver.
-      ul.lead
-        li Dry Cleaners
-        li Coin Laundromat 
-        li Fire Garment Restoration
-        a.btn.btn-lg.btn-success(href="#/contact") Contact us now
-        
-    .col-md-5
-      img.featurette-image.img-responsive(src="http://www.stcroixcleaners.com/wp-content/uploads/2012/07/earthfriendly.jpg")
-  hr.featurette-divider
+  .container-fluid.marketing
+    //- .row
+      .col-lg-4
+        img.img-circle(src='', alt='Generic placeholder image', style='width: 140px; height: 140px;')
+        h2 File uploader
+        p
+          | Uploads from local computer or a url. Makes a thumbnail and lists all files uploaded with option to crop on images.
+        p
+          a.btn.btn-default(href='#', role='button') View details »
+    //- .row
+      .col-lg-4
+        img.img-circle(src='', alt='Generic placeholder image', style='width: 140px; height: 140px;')
+        h2 Phone system
+        p
+          | Call forwarding to a local area code
+        p
+          a.btn.btn-default(href='#', role='button') View details »
+      
+    .no-slider
+      img.img-responsive(src='http://lockers4laundry.com/wp-content/uploads/2013/09/dry-cleaning-e1378086833631.jpg', alt='Generic placeholder image')
+    // START THE FEATURETTES
+    hr.featurette-divider
+    .row.featurette
+      .col-md-7
+        h2.featurette-heading
+          | Servicing the Lake Zurich for over 20 years. 
+          span.text-muted Dry Cleaning company.
+        p.lead
+          | We pickup and deliver.
+        ul.lead
+          li Dry Cleaners
+          li Coin Laundromat 
+          li Fire Garment Restoration
+          a.btn.btn-lg.btn-success(href="#/contact") Contact us now
+          
+      .col-md-5
+        img.featurette-image.img-responsive(src="http://www.stcroixcleaners.com/wp-content/uploads/2012/07/earthfriendly.jpg")
+    hr.featurette-divider
