--- a/app/main/home.jade
+++ b/app/main/home.jade
@@ -2,7 +2,7 @@
 div(ng-controller="mainCtrl", style="height: 540px;background-image: url('http://bkwld.com/img/misc/grid.png');top: -21px; left: 0px;")
   h1 Some Title Here
   button.btn.btn-lg.btn-success Continue!
-  video(loop="loop", autoplay, style=" position: absolute; top: -21px; left: 0px; min-width: 100%;z-index: -1;")
+  video(loop="loop", autoplay, style=" position: absolute; top: -21px; left: 0px; min-height: 100%; max-width: 100%;z-index: -1;")
     source(src='https://s3.amazonaws.com/kristile.com/videohiveFloorDemo.mp4', type="video/webm")
     //- <source src="/video/features/main.mp4", type="video/mp4">
   //- vid-bg(resources="resources", poster="poster", full-screen="fullScreen", muted="muted", z-index="zIndex")
